# python_simpleble

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  setup.py
.github/workflows/: ci_release.yml  ci_release_test.yml
examples/: write.py
src/: main.cpp
